# TinyPlane-War

./: Cargo.toml  README.md
assets/fonts/: CopyRight.txt
crates/fly/: Cargo.toml
crates/fly/src/: attitude.rs  background.rs  bullet.rs  collide.rs  enemy.rs  event.rs  global.rs  lib.rs  plane.rs  score.rs
crates/fly/src/audio/: mod.rs
crates/fly/src/game/: background.rs  bullet.rs  collide.rs  enemy.rs  mod.rs  plane.rs  score.rs
crates/fly/src/helper/: text.rs
crates/fly/src/menu/: credits.rs  main.rs  mod.rs  release_notes.rs
crates/fly/src/menu/settings/: generic.rs  graphic.rs  input.rs  mod.rs  sound.rs
crates/fly/src/stat/: game.rs  menu.rs  mod.rs
src/: main.rs
